# BotSecretary

./: .env.example  .gitignore  README.md  pyproject.toml
infrastructure/: providers.tf  terraform.tfvars  variables.tf  versions.tf
infrastructure/modules/networking/: main.tf  output.tf
src/bot_secretary/: __main__.py  business_logic.py  config.py  prompt_generator.py
src/bot_secretary/database/: crud.py  models.py
src/bot_secretary/prompt_templates/: background_prompt.html  dialog_settings.html  message_prompt.html  style_prompt.html
src/telegram_bot/: __main__.py  backend_client.py  config.py  handlers.py  schemas.py
tests/: conftest.py  test_prompt_generator.py
tests/test_telegram_bot/: conftest.py  test_backend_client.py
