[tool.poetry]
name = "botsecretary"
version = "0.1.0"
description = "Personal AI Bot Assistent"
authors = ["Aleksandr Kuznetsov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
boto3 = "^1.26.158"


[tool.poetry.group.telegram-bot]
optional = true

[tool.poetry.group.telegram-bot.dependencies]
python-telegram-bot = "^20.3"
aiohttp = "^3.8.4"


[tool.poetry.group.database]
optional = true

[tool.poetry.group.database.dependencies]
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.16"


[tool.poetry.group.openai-api]
optional = true

[tool.poetry.group.openai-api.dependencies]
openai = "^0.27.8"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
