[tool.poetry]
name = "botsecretary"
version = "0.1.0"
description = "Personal AI Bot Assistent"
authors = ["Aleksandr Kuznetsov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
loguru = "^0.7.0"


[tool.poetry.group.telegram-bot]
optional = true

[tool.poetry.group.telegram-bot.dependencies]
python-telegram-bot = "^20.4"
aiohttp = "^3.8.4"


[tool.poetry.group.database]
optional = true

[tool.poetry.group.database.dependencies]
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"


[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
langchain = "^0.0.235"
openai = "^0.27.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
boto3 = "^1.28.4"
pytest-aiohttp = "^1.0.4"
pytest-mock = "^3.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
